Removed Guava dependency from emodb-common-api